// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with label 1`] = `
<View
  accessibilityLabelledBy="checkbox-group-10-label"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    alignItems="center"
    display="flex"
    flexDirection="row"
    flexWrap="wrap"
    gap="spacing.0"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="text"
      fontSize={75}
      fontWeight="bold"
      lineHeight="s"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 16,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      Select fruits
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="surface.text.normal.lowContrast"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight="l"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          , 
        </Text>
      </View>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      gap="spacing.1"
      marginBottom="spacing.1"
      marginTop="spacing.1"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
            "gap": 4,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <View
          accessibilityDescribedBy="checkbox-1-helptext-3"
          accessibilityErrorMessage="checkbox-1-errortext-2"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="checkbox"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
          value="apple"
        >
<<<<<<< HEAD
          <View
            isChecked={false}
            isNegative={false}
=======
          <Text
            color="surface.text.subtle.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontWeight="regular"
            lineHeight="l"
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsla(220, 27%, 98%, 1)",
                  "borderColor": "hsla(216, 19%, 89%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "display": "flex",
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 8,
                  "marginTop": 3,
                  "width": 16,
                },
              ]
            }
<<<<<<< HEAD
          />
          <View
            style={
              Array [
                Object {},
              ]
            }
=======
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
          >
            <Text
              color="surface.text.subtle.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontWeight="regular"
              lineHeight="l"
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Apple
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <View
          accessibilityDescribedBy="checkbox-4-helptext-6"
          accessibilityErrorMessage="checkbox-4-errortext-5"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="checkbox"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
          value="mango"
        >
<<<<<<< HEAD
          <View
            isChecked={false}
            isNegative={false}
=======
          <Text
            color="surface.text.subtle.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontWeight="regular"
            lineHeight="l"
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsla(220, 27%, 98%, 1)",
                  "borderColor": "hsla(216, 19%, 89%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "display": "flex",
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 8,
                  "marginTop": 3,
                  "width": 16,
                },
              ]
            }
<<<<<<< HEAD
          />
          <View
            style={
              Array [
                Object {},
              ]
            }
=======
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
          >
            <Text
              color="surface.text.subtle.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontWeight="regular"
              lineHeight="l"
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Mango
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <View
          accessibilityDescribedBy="checkbox-7-helptext-9"
          accessibilityErrorMessage="checkbox-7-errortext-8"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="checkbox"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
          value="orange"
        >
<<<<<<< HEAD
          <View
            isChecked={false}
            isNegative={false}
=======
          <Text
            color="surface.text.subtle.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontWeight="regular"
            lineHeight="l"
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsla(220, 27%, 98%, 1)",
                  "borderColor": "hsla(216, 19%, 89%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "display": "flex",
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 8,
                  "marginTop": 3,
                  "width": 16,
                },
              ]
            }
<<<<<<< HEAD
          />
          <View
            style={
              Array [
                Object {},
              ]
            }
=======
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
          >
            <Text
              color="surface.text.subtle.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontWeight="regular"
              lineHeight="l"
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Orange
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CheckboxGroup /> should render with label 2`] = `
<View
  accessibilityLabelledBy="checkbox-group-21-label"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    alignItems="center"
    display="flex"
    flexDirection="row"
    flexWrap="wrap"
    gap="spacing.0"
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="text"
      fontSize={75}
      fontWeight="bold"
      lineHeight="s"
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 16,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      Select fruits
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="surface.text.normal.lowContrast"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight="l"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          , Select one
        </Text>
      </View>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      gap="spacing.1"
      marginBottom="spacing.1"
      marginTop="spacing.1"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
            "gap": 4,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <View
          accessibilityDescribedBy="checkbox-22-helptext-24"
          accessibilityErrorMessage="checkbox-22-errortext-23"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="checkbox"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
          value="apple"
        >
<<<<<<< HEAD
          <View
            isChecked={false}
            isNegative={false}
=======
          <Text
            color="surface.text.subtle.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontWeight="regular"
            lineHeight="l"
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsla(220, 27%, 98%, 1)",
                  "borderColor": "hsla(216, 19%, 89%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "display": "flex",
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 8,
                  "marginTop": 3,
                  "width": 16,
                },
              ]
            }
<<<<<<< HEAD
          />
          <View
            style={
              Array [
                Object {},
              ]
            }
=======
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
          >
            <Text
              color="surface.text.subtle.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontWeight="regular"
              lineHeight="l"
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Apple
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <View
          accessibilityDescribedBy="checkbox-25-helptext-27"
          accessibilityErrorMessage="checkbox-25-errortext-26"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="checkbox"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
          value="mango"
        >
<<<<<<< HEAD
          <View
            isChecked={false}
            isNegative={false}
=======
          <Text
            color="surface.text.subtle.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontWeight="regular"
            lineHeight="l"
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsla(220, 27%, 98%, 1)",
                  "borderColor": "hsla(216, 19%, 89%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "display": "flex",
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 8,
                  "marginTop": 3,
                  "width": 16,
                },
              ]
            }
<<<<<<< HEAD
          />
          <View
            style={
              Array [
                Object {},
              ]
            }
=======
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
          >
            <Text
              color="surface.text.subtle.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontWeight="regular"
              lineHeight="l"
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Mango
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <View
          accessibilityDescribedBy="checkbox-28-helptext-30"
          accessibilityErrorMessage="checkbox-28-errortext-29"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="checkbox"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
          value="orange"
        >
<<<<<<< HEAD
          <View
            isChecked={false}
            isNegative={false}
=======
          <Text
            color="surface.text.subtle.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontWeight="regular"
            lineHeight="l"
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsla(220, 27%, 98%, 1)",
                  "borderColor": "hsla(216, 19%, 89%, 1)",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "display": "flex",
                  "height": 16,
                  "justifyContent": "center",
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 8,
                  "marginTop": 3,
                  "width": 16,
                },
              ]
            }
<<<<<<< HEAD
          />
          <View
            style={
              Array [
                Object {},
              ]
            }
=======
>>>>>>> 1b11dc8c (fix(Typography): expose text styles)
          >
            <Text
              color="surface.text.subtle.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontWeight="regular"
              lineHeight="l"
              style={
                Array [
                  Object {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Orange
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      marginTop="spacing.1"
      style={
        Array [
          Object {
            "marginTop": 4,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="surface.text.muted.lowContrast"
        fontFamily="text"
        fontSize={50}
        fontStyle="italic"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 11,
              "fontStyle": "italic",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Select one
      </Text>
    </View>
  </View>
</View>
`;
